Update About me

--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
         setTimeout(function(){
             $("#me").show();
         }, 4000);
+        $("#about-me").hide();
+        setTimeout(function(){
+            $("#about-me").show();
+        }, 4000);
     </script>
 </body>
 </html>
