--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
 
     <!--Skills-->
-    <div class="wrapper">
+    <div class="wrapper" id="skill">
         <div class="container">
             <div class="title">
                 <h1>
@@ -156,6 +156,10 @@
         $("#about-me").hide();
         setTimeout(function(){
             $("#about-me").show();
+        }, 4000);
+        $("#skill").hide();
+        setTimeout(function(){
+            $("#skill").show();
         }, 4000);
     </script>
 </body>
