--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!--About Me-->
     <div class="wrapper" id="about-me">
         <div class="container">
-            <div class="title">
+            <div class="about-me-title">
                 <h1>
                     <span class="line"></span>
                     <span class="dot"></span>
@@ -87,55 +87,6 @@
     </div>
 
     <!--Skills-->
-    <div class="wrapper" id="skill">
-        <div class="container">
-            <div class="title">
-                <h1>
-                    <span class="line"></span>
-                    <span class="dot"></span>
-                    Kemampuan
-                    <span class="dot"></span>
-                    <span class="line"></span>
-                </h1>
-            </div>
-            <div class="content">
-                <div class="skill-content">
-                    <h2>HTML</h2>
-                    <div class="meter">
-                        <span style="width: 70%;">70%</span>
-                    </div>
-                </div>
-                <div class="skill-content">
-                    <h2>CSS</h2>
-                    <div class="meter">
-                        <span style="width: 70%;background-color: rgb(44, 197, 224);
-                        box-shadow: 1px 1px 10px rgb(58, 217, 245);">70%</span>
-                    </div>
-                </div>
-                <div class="skill-content">
-                    <h2>PHP</h2>
-                    <div class="meter">
-                        <span style="width: 75%;background-color: rgb(44, 212, 95);
-                        box-shadow: 1px 1px 10px rgb(74, 236, 122);">75%</span>
-                    </div>
-                </div>
-                <div class="skill-content">
-                    <h2>Python</h2>
-                    <div class="meter">
-                        <span style="width: 75%;background-color: rgb(61, 41, 107);
-                        box-shadow: 1px 1px 10px rgb(118, 82, 201);">75%</span>
-                    </div>
-                </div>
-                <div class="skill-content">
-                    <h2>M. Office</h2>
-                    <div class="meter">
-                        <span style="width: 80%;background-color: rgb(177, 101, 39);
-                        box-shadow: 1px 1px 10px rgb(214, 133, 66)">80%</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -156,10 +107,6 @@
         $("#about-me").hide();
         setTimeout(function(){
             $("#about-me").show();
-        }, 4000);
-        $("#skill").hide();
-        setTimeout(function(){
-            $("#skill").show();
         }, 4000);
     </script>
 </body>
