--- a/index.html
+++ b/index.html
@@ -86,7 +86,87 @@
         </div>
     </div>
 
-    <!--Skills-->
+    <!--project-->
+    <div class="wrapper">
+        <div class="container">
+            <div class="about-me-title">
+                <h1>
+                    <span class="line"></span>
+                    <span class="dot"></span>
+                    Project
+                    <span class="dot"></span>
+                    <span class="line"></span>
+                </h1>
+            </div>
+            <div class="container-project">
+                <div class="row-content">
+                    <div class="card-box-project">
+                        <img src="assets/game-retail.PNG" class="img-card">
+                        <div class="card-txt">
+                            <h2>Game - Retail</h2>
+                            <hr>
+                            <p>Aplikasi ini adalah aplikasi <span class="txt-imp"> sistem rekomendasi.</span></p>
+                            <p>Dimana pada sistemnya menggunakan <span class="txt-imp">alogritma K-Means</span> sebagai acuan perekomendasian item.</p>
+                            <p>Aplikasi ini dibangun menggunakan <span class="txt-imp">Python Flask </span>yang dikombinasikan dengan <span class="txt-imp">algoritma machine learning "K-Means"</span>.</p>
+                            <div class="button-link">
+                                <a class="btn btn-more" href="https://github.com/faqih-ar/Game-Retail" target="_blank">Tampilkan File</a>
+                                <a class="btn btn-more" href="https://game-retail.herokuapp.com/" target="_blank">Tampilkan Aplikasi</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-box-project">
+                        <img src="assets/eclib.PNG" class="img-card">
+                        <div class="card-txt">
+                            <h2>Eclib (E-Perpus)</h2>
+                            <hr>
+                            <p>Aplikasi ini adalah <span class="txt-imp">e-perpustakaan.</span></p>
+                            <p>Dimana pada aplikasi ini adalah aplikasi sederhana untuk membaca buku secara online</p>
+                            <p>Aplikasi ini di bangun menggunakan <span class="txt-imp"> PHP dan Laravel </span>sebagai frameworknya</p>
+                            <div class="button-link">
+                                <a class="btn btn-more" href="https://gitlab.com/faqihrra/kelompok-13-final-project" target="_blank">Tampilkan File</a>
+                                <a class="btn btn-more" href="http://eclib-kelompok-13.herokuapp.com/" target="_blank">Tampilkan Aplikasi</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-box-project">
+                        <img src="assets/myschool.PNG" class="img-card">
+                        <div class="card-txt">
+                            <h2>MySchool</h2>
+                            <hr>
+                            <p>Aplikasi <span class="txt-imp">landing page sederhana dengan tema sekolah.</span></p>
+                            <p>Aplikasi ini di bangun menggunakan pure <span class="txt-imp">HTML dan CSS</span> dengan tema sekolah.</p>
+                            <div class="button-link">
+                                <a class="btn btn-more" href="https://github.com/faqih-ar/MySchool-HTMLCSS" target="_blank">Tampilkan File</a>
+                                <a class="btn btn-more" href="https://faqih-ar.github.io/MySchool-HTMLCSS/" target="_blank">Tampilkan Aplikasi</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-box-project">
+                        <img src="assets/mongodbapp.PNG" class="img-card">
+                        <div class="card-txt">
+                            <h2>MongoDB app</h2>
+                            <hr>
+                            <p>MongoDB app ini hanyalah <span class="txt-imp">CRUD Backend </span>sederhana yang saya buat menggunakan <span class="txt-imp">MongoDB</span> sebagai databasenya, <span class="txt-imp">FastApi </span>dan <span class="txt-imp">ODM Mongoengine </span>sebagai penulisan kodenya.</p>
+                            <div class="button-link">
+                                <a class="btn btn-more" href="https://gitlab.com/perpustakaanapp1/mongoapp" target="_blank">Tampilkan File</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-box-project">
+                        <img src="assets/mysqlapp.PNG" class="img-card">
+                        <div class="card-txt">
+                            <h2>MysqlApp</h2>
+                            <hr>
+                            <p>MysqlApp ini hanyalah <span class="txt-imp">CRUD Backend </span>sederhana yang saya buat menggunakan <span class="txt-imp">Python Flask</span>, <span class="txt-imp">Mysql</span> sebagai databasenya, dan <span class="txt-imp">ORM </span>sebagai penulisan kodenya. </p>
+                            <div class="button-link">
+                                <a class="btn btn-more" href="https://gitlab.com/perpustakaanapp1/mysqlapp" target="_blank">Tampilkan File</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
