--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="nav-list">
                 <ul>
                     <li><a href="#about-me"><span class="dot"></span>About Me</a></li>
-                    <li><a href="#"><span class="dot"></span>Project</a></li>
+                    <li><a href="#project"><span class="dot"></span>Project</a></li>
                     <li><a href="#"><span class="dot"></span>Contact Me</a></li>
                 </ul>
             </div>
@@ -87,7 +87,7 @@
     </div>
 
     <!--project-->
-    <div class="wrapper">
+    <div class="wrapper" id="project">
         <div class="container">
             <div class="about-me-title">
                 <h1>
@@ -103,63 +103,68 @@
                     <div class="card-box-project">
                         <img src="assets/game-retail.PNG" class="img-card">
                         <div class="card-txt">
-                            <h2>Game - Retail</h2>
-                            <hr>
-                            <p>Aplikasi ini adalah aplikasi <span class="txt-imp"> sistem rekomendasi.</span></p>
-                            <p>Dimana pada sistemnya menggunakan <span class="txt-imp">alogritma K-Means</span> sebagai acuan perekomendasian item.</p>
-                            <p>Aplikasi ini dibangun menggunakan <span class="txt-imp">Python Flask </span>yang dikombinasikan dengan <span class="txt-imp">algoritma machine learning "K-Means"</span>.</p>
-                            <div class="button-link">
-                                <a class="btn btn-more" href="https://github.com/faqih-ar/Game-Retail" target="_blank">Tampilkan File</a>
-                                <a class="btn btn-more" href="https://game-retail.herokuapp.com/" target="_blank">Tampilkan Aplikasi</a>
+                            <div class="row-txt">
+                                <h2>Game - Retail</h2>
+                                <p>Aplikasi ini adalah aplikasi <span class="txt-imp"> sistem rekomendasi.</span>
+                                Dimana pada sistemnya menggunakan <span class="txt-imp">alogritma K-Means</span> sebagai acuan perekomendasian item.
+                                Aplikasi ini dibangun menggunakan <span class="txt-imp">Python Flask </span>yang dikombinasikan dengan <span class="txt-imp">algoritma machine learning "K-Means"</span>.</p>
+                                <div class="button-link" style="margin-top: 10px;">
+                                    <a class="btn btn-more" href="https://github.com/faqih-ar/Game-Retail" target="_blank">Tampilkan File</a>
+                                    <a class="btn btn-more" href="https://game-retail.herokuapp.com/" target="_blank">Tampilkan Aplikasi</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="card-box-project">
                         <img src="assets/eclib.PNG" class="img-card">
                         <div class="card-txt">
-                            <h2>Eclib (E-Perpus)</h2>
-                            <hr>
-                            <p>Aplikasi ini adalah <span class="txt-imp">e-perpustakaan.</span></p>
-                            <p>Dimana pada aplikasi ini adalah aplikasi sederhana untuk membaca buku secara online</p>
-                            <p>Aplikasi ini di bangun menggunakan <span class="txt-imp"> PHP dan Laravel </span>sebagai frameworknya</p>
-                            <div class="button-link">
-                                <a class="btn btn-more" href="https://gitlab.com/faqihrra/kelompok-13-final-project" target="_blank">Tampilkan File</a>
-                                <a class="btn btn-more" href="http://eclib-kelompok-13.herokuapp.com/" target="_blank">Tampilkan Aplikasi</a>
+                            <div class="row-txt">
+                                <h2>Eclib (E-Perpus)</h2>
+                                <p>Aplikasi ini adalah <span class="txt-imp">e-perpustakaan.</span>
+                                Dimana pada aplikasi ini adalah aplikasi sederhana untuk membaca buku secara online
+                                Aplikasi ini di bangun menggunakan <span class="txt-imp"> PHP dan Laravel </span>sebagai frameworknya</p>
+                                <div class="button-link" style="margin-top: 35px;">
+                                    <a class="btn btn-more" href="https://gitlab.com/faqihrra/kelompok-13-final-project" target="_blank">Tampilkan File</a>
+                                    <a class="btn btn-more" href="http://eclib-kelompok-13.herokuapp.com/" target="_blank">Tampilkan Aplikasi</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="card-box-project">
                         <img src="assets/myschool.PNG" class="img-card">
                         <div class="card-txt">
-                            <h2>MySchool</h2>
-                            <hr>
-                            <p>Aplikasi <span class="txt-imp">landing page sederhana dengan tema sekolah.</span></p>
-                            <p>Aplikasi ini di bangun menggunakan pure <span class="txt-imp">HTML dan CSS</span> dengan tema sekolah.</p>
-                            <div class="button-link">
-                                <a class="btn btn-more" href="https://github.com/faqih-ar/MySchool-HTMLCSS" target="_blank">Tampilkan File</a>
-                                <a class="btn btn-more" href="https://faqih-ar.github.io/MySchool-HTMLCSS/" target="_blank">Tampilkan Aplikasi</a>
+                            <div class="row-txt">
+                                <h2>MySchool</h2>
+                                <p>Aplikasi <span class="txt-imp">landing page sederhana dengan tema sekolah.</span>
+                                Aplikasi ini di bangun menggunakan pure <span class="txt-imp">HTML dan CSS</span> dengan tema sekolah.</p>
+                                <div class="button-link" style="margin-top: 80px;">
+                                    <a class="btn btn-more" href="https://github.com/faqih-ar/MySchool-HTMLCSS" target="_blank">Tampilkan File</a>
+                                    <a class="btn btn-more" href="https://faqih-ar.github.io/MySchool-HTMLCSS/" target="_blank">Tampilkan Aplikasi</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="card-box-project">
                         <img src="assets/mongodbapp.PNG" class="img-card">
                         <div class="card-txt">
-                            <h2>MongoDB app</h2>
-                            <hr>
-                            <p>MongoDB app ini hanyalah <span class="txt-imp">CRUD Backend </span>sederhana yang saya buat menggunakan <span class="txt-imp">MongoDB</span> sebagai databasenya, <span class="txt-imp">FastApi </span>dan <span class="txt-imp">ODM Mongoengine </span>sebagai penulisan kodenya.</p>
-                            <div class="button-link">
-                                <a class="btn btn-more" href="https://gitlab.com/perpustakaanapp1/mongoapp" target="_blank">Tampilkan File</a>
+                            <div class="row-txt">
+                                <h2>MongoDB app</h2>
+                                <p>MongoDB app ini hanyalah <span class="txt-imp">CRUD Backend </span>sederhana yang saya buat menggunakan <span class="txt-imp">MongoDB</span> sebagai databasenya, <span class="txt-imp">FastApi </span>dan <span class="txt-imp">ODM Mongoengine </span>sebagai penulisan kodenya.</p>
+                                <div class="button-link" style="margin-top: 60px;">
+                                    <a class="btn btn-more" href="https://gitlab.com/perpustakaanapp1/mongoapp" target="_blank">Tampilkan File</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="card-box-project">
                         <img src="assets/mysqlapp.PNG" class="img-card">
                         <div class="card-txt">
-                            <h2>MysqlApp</h2>
-                            <hr>
-                            <p>MysqlApp ini hanyalah <span class="txt-imp">CRUD Backend </span>sederhana yang saya buat menggunakan <span class="txt-imp">Python Flask</span>, <span class="txt-imp">Mysql</span> sebagai databasenya, dan <span class="txt-imp">ORM </span>sebagai penulisan kodenya. </p>
-                            <div class="button-link">
-                                <a class="btn btn-more" href="https://gitlab.com/perpustakaanapp1/mysqlapp" target="_blank">Tampilkan File</a>
+                            <div class="row-txt">
+                                <h2>MysqlApp</h2>
+                                <p>MysqlApp ini hanyalah <span class="txt-imp">CRUD Backend </span>sederhana yang saya buat menggunakan <span class="txt-imp">Python Flask</span>, <span class="txt-imp">Mysql</span> sebagai databasenya, dan <span class="txt-imp">ORM </span>sebagai penulisan kodenya. </p>
+                                <div class="button-link" style="margin-top: 60px;">
+                                    <a class="btn btn-more" href="https://gitlab.com/perpustakaanapp1/mysqlapp" target="_blank">Tampilkan File</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -187,6 +192,10 @@
         $("#about-me").hide();
         setTimeout(function(){
             $("#about-me").show();
+        }, 4000);
+        $("#project").hide();
+        setTimeout(function(){
+            $("#project").show();
         }, 4000);
     </script>
 </body>
