--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 <p>Aplikasi ini adalah aplikasi <span class="txt-imp"> sistem rekomendasi.</span>
                                 Dimana pada sistemnya menggunakan <span class="txt-imp">alogritma K-Means</span> sebagai acuan perekomendasian item.
                                 Aplikasi ini dibangun menggunakan <span class="txt-imp">Python Flask </span>yang dikombinasikan dengan <span class="txt-imp">algoritma machine learning "K-Means"</span>.</p>
-                                <div class="button-link" style="margin-top: 10px;">
+                                <div class="button-link">
                                     <a class="btn btn-more" href="https://github.com/faqih-ar/Game-Retail" target="_blank">Tampilkan File</a>
                                     <a class="btn btn-more" href="https://game-retail.herokuapp.com/" target="_blank">Tampilkan Aplikasi</a>
                                 </div>
@@ -137,7 +137,7 @@
                                 <p>Aplikasi ini adalah <span class="txt-imp">e-perpustakaan.</span>
                                 Dimana pada aplikasi ini adalah aplikasi sederhana untuk membaca buku secara online
                                 Aplikasi ini di bangun menggunakan <span class="txt-imp"> PHP dan Laravel </span>sebagai frameworknya</p>
-                                <div class="button-link" style="margin-top: 35px;">
+                                <div class="button-link">
                                     <a class="btn btn-more" href="https://gitlab.com/faqihrra/kelompok-13-final-project" target="_blank">Tampilkan File</a>
                                     <a class="btn btn-more" href="http://eclib-kelompok-13.herokuapp.com/" target="_blank">Tampilkan Aplikasi</a>
                                 </div>
@@ -151,7 +151,7 @@
                                 <h2>MySchool</h2>
                                 <p>Aplikasi <span class="txt-imp">landing page sederhana dengan tema sekolah.</span>
                                 Aplikasi ini di bangun menggunakan pure <span class="txt-imp">HTML dan CSS</span> dengan tema sekolah.</p>
-                                <div class="button-link" style="margin-top: 80px;">
+                                <div class="button-link">
                                     <a class="btn btn-more" href="https://github.com/faqih-ar/MySchool-HTMLCSS" target="_blank">Tampilkan File</a>
                                     <a class="btn btn-more" href="https://faqih-ar.github.io/MySchool-HTMLCSS/" target="_blank">Tampilkan Aplikasi</a>
                                 </div>
@@ -164,7 +164,7 @@
                             <div class="row-txt">
                                 <h2>MongoDB app</h2>
                                 <p>MongoDB app ini hanyalah <span class="txt-imp">CRUD Backend </span>sederhana yang saya buat menggunakan <span class="txt-imp">MongoDB</span> sebagai databasenya, <span class="txt-imp">FastApi </span>dan <span class="txt-imp">ODM Mongoengine </span>sebagai penulisan kodenya.</p>
-                                <div class="button-link" style="margin-top: 60px;">
+                                <div class="button-link">
                                     <a class="btn btn-more" href="https://gitlab.com/perpustakaanapp1/mongoapp" target="_blank">Tampilkan File</a>
                                 </div>
                             </div>
@@ -176,7 +176,7 @@
                             <div class="row-txt">
                                 <h2>MysqlApp</h2>
                                 <p>MysqlApp ini hanyalah <span class="txt-imp">CRUD Backend </span>sederhana yang saya buat menggunakan <span class="txt-imp">Python Flask</span>, <span class="txt-imp">Mysql</span> sebagai databasenya, dan <span class="txt-imp">ORM </span>sebagai penulisan kodenya. </p>
-                                <div class="button-link" style="margin-top: 60px;">
+                                <div class="button-link">
                                     <a class="btn btn-more" href="https://gitlab.com/perpustakaanapp1/mysqlapp" target="_blank">Tampilkan File</a>
                                 </div>
                             </div>
