update and footer

--- a/index.html
+++ b/index.html
@@ -187,6 +187,12 @@
         </div>
     </div>
 
+    <!--Footer-->
+    <footer class="footer-wrapper" id="footer">
+        <div class="container-footer">
+            <h3 class="word">Created By Faqih Auliyaur Rohman, June 2021</h3>
+        </div>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
@@ -226,6 +232,10 @@
         $("#project").hide();
         setTimeout(function(){
             $("#project").show();
+        }, 4000);
+        $('#footer').hide();
+        setTimeout(function(){
+            $("#footer").show();
         }, 4000);
     </script>
 </body>
